--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "sass": "^1.35.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.6",
     "eslint": "7.28.0",
-    "eslint-config-next": "11.0.0"
+    "eslint-config-next": "11.0.0",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4"
   }
 }
